<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		artboard_7
	 *	@date 		0
	 *	@title 		Artboard 7
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.2.8.xd
	 *
	 */
	-->
	<ScrollView android:id="@+id/artboard_7" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="760dp" >

			<View android:id="@+id/_bg__artboard_7"
				android:background="@drawable/_bg__artboard_7_shape"
				 android:layout_marginLeft="0dp"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="760dp" />

			<View android:id="@+id/rectangle_117"
				android:background="@drawable/rectangle_117_shape"
				 android:layout_marginLeft="3060dp"
				 android:layout_marginStart="3060dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="760dp" />

			<ImageView android:id="@+id/path_217"
				android:src="@drawable/path_217"
				android:contentDescription="path_217"
				 android:layout_marginLeft="3037.5dp"
				 android:layout_marginStart="3037.5dp"
				android:layout_marginTop="-7.5dp"
				android:layout_width="405dp"
				android:layout_height="357dp" />

			<View android:id="@+id/input"
				android:background="@drawable/input_shape"
				 android:layout_marginLeft="3076dp"
				 android:layout_marginStart="3076dp"
				android:layout_marginTop="227dp"
				android:layout_width="70dp"
				android:layout_height="1dp" />

			<View android:id="@+id/input_ek1"
				android:background="@drawable/input_ek1_shape"
				 android:layout_marginLeft="3162dp"
				 android:layout_marginStart="3162dp"
				android:layout_marginTop="227dp"
				android:layout_width="70dp"
				android:layout_height="1dp" />

			<View android:id="@+id/input_ek2"
				android:background="@drawable/input_ek2_shape"
				 android:layout_marginLeft="3248dp"
				 android:layout_marginStart="3248dp"
				android:layout_marginTop="227dp"
				android:layout_width="70dp"
				android:layout_height="1dp" />

			<View android:id="@+id/input_ek3"
				android:background="@drawable/input_ek3_shape"
				 android:layout_marginLeft="3334dp"
				 android:layout_marginStart="3334dp"
				android:layout_marginTop="227dp"
				android:layout_width="70dp"
				android:layout_height="1dp" />

			<TextView android:id="@+id/_4_digit_code_sent_to__94_71_878_6729"
				android:fontFamily="Roboto-Regular"
				android:textSize="16sp"
				android:textColor="@color/_4_digit_code_sent_to__94_71_878_6729_color"
				android:layout_marginLeft="3076dp"
				android:layout_marginTop="141.00024414062dp"
				android:layout_width="264dp"
				android:layout_height="24dp"
				android:text="@string/_4_digit_code_sent_to__94_71_878_6729_string"
				 />

			<TextView android:id="@+id/verify_your_number"
				android:fontFamily="Roboto-Medium"
				android:textSize="24sp"
				android:textColor="@color/verify_your_number_color"
				android:layout_marginLeft="3076dp"
				android:layout_marginTop="106.00024414062dp"
				android:layout_width="208dp"
				android:layout_height="37dp"
				android:text="@string/verify_your_number_string"
				 />

			<View android:id="@+id/bg"
				android:background="@drawable/bg_shape"
				 android:layout_marginLeft="3060dp"
				 android:layout_marginStart="3060dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="80dp" />

			<TextView android:id="@+id/verify_number"
				android:fontFamily="Roboto-Medium"
				android:textSize="20sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3132dp"
				android:layout_marginTop="37dp"
				android:layout_width="130dp"
				android:layout_height="31dp"
				android:text="@string/verify_number_string"
				 />

			<ImageView android:id="@+id/space"
				android:src="@drawable/space"
				android:contentDescription="space"
				 android:layout_marginLeft="3076dp"
				 android:layout_marginStart="3076dp"
				android:layout_marginTop="40dp"
				android:layout_width="24dp"
				android:layout_height="24dp" />

			<ImageView android:id="@+id/icon"
				android:src="@drawable/icon"
				android:contentDescription="icon"
				 android:layout_marginLeft="3080dp"
				 android:layout_marginStart="3080dp"
				android:layout_marginTop="44dp"
				android:layout_width="16dp"
				android:layout_height="16dp" />

			<View android:id="@+id/bg_ek1"
				android:background="@drawable/bg_ek1_shape"
				 android:layout_marginLeft="3310dp"
				 android:layout_marginStart="3310dp"
				android:layout_marginTop="252dp"
				android:layout_width="94dp"
				android:layout_height="36dp" />

			<TextView android:id="@+id/verify"
				android:fontFamily="Roboto-Medium"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="14sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3332.7551269531dp"
				android:layout_marginTop="260dp"
				android:layout_width="49dp"
				android:layout_height="22dp"
				android:text="@string/verify_string"
				 />

			<TextView android:id="@+id/resend_in_00_52s"
				android:fontFamily="Roboto-Medium"
				android:textSize="16sp"
				android:textColor="@color/resend_in_00_52s_color"
				android:layout_marginLeft="3076.0004882812dp"
				android:layout_marginTop="258dp"
				android:layout_width="123dp"
				android:layout_height="24dp"
				android:text="@string/resend_in_00_52s_string"
				 />

			<View android:id="@+id/bg_ek2"
				android:background="@drawable/bg_ek2_shape"
				 android:layout_marginLeft="3060dp"
				 android:layout_marginStart="3060dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="24dp" />

			<TextView android:id="@+id/_12_30"
				android:fontFamily="Roboto-Regular"
				android:textSize="13sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3379dp"
				android:layout_marginTop="5dp"
				android:layout_width="37dp"
				android:layout_height="18dp"
				android:text="@string/_12_30_string"
				 />


			<RelativeLayout android:id="@+id/battery"
				android:layout_marginTop="5dp"
				android:layout_marginStart="3362dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/path_218"
					android:src="@drawable/path_218"
					android:contentDescription="path_218"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="8dp"
					android:layout_height="7dp" />

				<View android:id="@+id/rectangle_118"
					android:background="@drawable/rectangle_118_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="7dp"
					android:layout_width="8dp"
					android:layout_height="6dp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/network"
				android:layout_marginTop="6dp"
				android:layout_marginStart="3336dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/path_219"
					android:src="@drawable/path_219"
					android:contentDescription="path_219"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="6dp"
					android:layout_width="6dp"
					android:layout_height="5.96875dp" />

				<ImageView android:id="@+id/path_220"
					android:src="@drawable/path_220"
					android:contentDescription="path_220"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="12.062744140625dp"
					android:layout_height="12dp" />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/wifi"
				android:layout_marginTop="5dp"
				android:layout_marginStart="3309dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/group_152"
					android:src="@drawable/group_152"
					android:contentDescription="group_152"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="18dp"
					android:layout_height="14dp" />

			</RelativeLayout>

			<View android:id="@+id/bg_ek3"
				android:background="@drawable/bg_ek3_shape"
				 android:layout_marginLeft="3060dp"
				 android:layout_marginStart="3060dp"
				android:layout_marginTop="492dp"
				android:layout_width="360dp"
				android:layout_height="220dp" />

			<TextView android:id="@+id/_1"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3098.65234375dp"
				android:layout_marginTop="512.52185058594dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_1_string"
				 />

			<TextView android:id="@+id/_2"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3189.4348144531dp"
				android:layout_marginTop="512.52185058594dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_2_string"
				 />

			<TextView android:id="@+id/_3"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3280.2172851562dp"
				android:layout_marginTop="512.52185058594dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_3_string"
				 />

			<TextView android:id="@+id/__"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3371.5217285156dp"
				android:layout_marginTop="512.52185058594dp"
				android:layout_width="12dp"
				android:layout_height="34dp"
				android:text="@string/___string"
				 />

			<TextView android:id="@+id/___ek1"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3371.5217285156dp"
				android:layout_marginTop="566.99975585938dp"
				android:layout_width="11dp"
				android:layout_height="34dp"
				android:text="@string/___ek1_string"
				 />

			<TextView android:id="@+id/_4"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3098.65234375dp"
				android:layout_marginTop="567.00036621094dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_4_string"
				 />

			<TextView android:id="@+id/_5"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3189.4348144531dp"
				android:layout_marginTop="567.00036621094dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_5_string"
				 />

			<TextView android:id="@+id/_6"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3280.2172851562dp"
				android:layout_marginTop="567.00036621094dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_6_string"
				 />

			<TextView android:id="@+id/_7"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3098.65234375dp"
				android:layout_marginTop="621.47888183594dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_7_string"
				 />

			<TextView android:id="@+id/___ek2"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3088.7392578125dp"
				android:layout_marginTop="673.39190673828dp"
				android:layout_width="15dp"
				android:layout_height="34dp"
				android:text="@string/___ek2_string"
				 />

			<TextView android:id="@+id/___ek3"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3106.7392578125dp"
				android:layout_marginTop="674.6962890625dp"
				android:layout_width="20dp"
				android:layout_height="34dp"
				android:text="@string/___ek3_string"
				 />

			<TextView android:id="@+id/_8"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3189.4348144531dp"
				android:layout_marginTop="621.47888183594dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_8_string"
				 />

			<TextView android:id="@+id/_0"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3178.2172851562dp"
				android:layout_marginTop="674.69659423828dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_0_string"
				 />

			<TextView android:id="@+id/___ek4"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3198.5651855469dp"
				android:layout_marginTop="674.69659423828dp"
				android:layout_width="19dp"
				android:layout_height="34dp"
				android:text="@string/___ek4_string"
				 />

			<TextView android:id="@+id/_9"
				android:fontFamily="Roboto-Regular"
				android:textSize="24sp"
				android:textColor="@color/verify_number_color"
				android:layout_marginLeft="3280.2172851562dp"
				android:layout_marginTop="621.47888183594dp"
				android:layout_width="18dp"
				android:layout_height="34dp"
				android:text="@string/_9_string"
				 />

			<ImageView android:id="@+id/delete"
				android:src="@drawable/delete"
				android:contentDescription="delete"
				 android:layout_marginLeft="3362.2170410156dp"
				 android:layout_marginStart="3362.2170410156dp"
				android:layout_marginTop="624dp"
				android:layout_width="24dp"
				android:layout_height="18dp" />

			<ImageView android:id="@+id/space_ek1"
				android:src="@drawable/space_ek1"
				android:contentDescription="space_ek1"
				 android:layout_marginLeft="3251dp"
				 android:layout_marginStart="3251dp"
				android:layout_marginTop="675dp"
				android:layout_width="70dp"
				android:layout_height="24dp" />


			<RelativeLayout android:id="@+id/group_153"
				android:layout_marginTop="663dp"
				android:layout_marginStart="3350.2172851562dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/bg_ek4"
					android:background="@drawable/bg_ek4_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="36dp"
					android:layout_height="36dp" />

				<ImageView android:id="@+id/path_222"
					android:src="@drawable/path_222"
					android:contentDescription="path_222"
					 android:layout_marginLeft="16dp"
					 android:layout_marginStart="16dp"
					android:layout_marginTop="13dp"
					android:layout_width="6.47314453125dp"
					android:layout_height="10.982055664062dp" />

			</RelativeLayout>

			<View android:id="@+id/bg_ek5"
				android:background="@drawable/bg_ek5_shape"
				 android:layout_marginLeft="3060dp"
				 android:layout_marginStart="3060dp"
				android:layout_marginTop="712dp"
				android:layout_width="360dp"
				android:layout_height="48dp" />

			<ImageView android:id="@+id/recent"
				android:src="@drawable/recent"
				android:contentDescription="recent"
				 android:layout_marginLeft="3332dp"
				 android:layout_marginStart="3332dp"
				android:layout_marginTop="727dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<ImageView android:id="@+id/home"
				android:src="@drawable/home"
				android:contentDescription="home"
				 android:layout_marginLeft="3231dp"
				 android:layout_marginStart="3231dp"
				android:layout_marginTop="727dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<ImageView android:id="@+id/hide"
				android:src="@drawable/hide"
				android:contentDescription="hide"
				 android:layout_marginLeft="3130.0131835938dp"
				 android:layout_marginStart="3130.0131835938dp"
				android:layout_marginTop="727dp"
				android:layout_width="18.979736328125dp"
				android:layout_height="16.994018554688dp" />

			<TextView android:id="@+id/_2_ek1"
				android:fontFamily="Roboto-Medium"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="16sp"
				android:textColor="@color/verify_your_number_color"
				android:layout_marginLeft="3104dp"
				android:layout_marginTop="199dp"
				android:layout_width="13dp"
				android:layout_height="24dp"
				android:text="@string/_2_ek1_string"
				 />

			<TextView android:id="@+id/_8_ek1"
				android:fontFamily="Roboto-Medium"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="16sp"
				android:textColor="@color/verify_your_number_color"
				android:layout_marginLeft="3190.0002441406dp"
				android:layout_marginTop="199dp"
				android:layout_width="13dp"
				android:layout_height="24dp"
				android:text="@string/_8_ek1_string"
				 />

			<TextView android:id="@+id/_5_ek1"
				android:fontFamily="Roboto-Medium"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="16sp"
				android:textColor="@color/verify_your_number_color"
				android:layout_marginLeft="3276.0004882812dp"
				android:layout_marginTop="199dp"
				android:layout_width="13dp"
				android:layout_height="24dp"
				android:text="@string/_5_ek1_string"
				 />

			<TextView android:id="@+id/_4_ek1"
				android:fontFamily="Roboto-Medium"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="16sp"
				android:textColor="@color/verify_your_number_color"
				android:layout_marginLeft="3362.0004882812dp"
				android:layout_marginTop="199dp"
				android:layout_width="13dp"
				android:layout_height="24dp"
				android:text="@string/_4_ek1_string"
				 />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>